k8s/base/services/uptime-kuma/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`uptime.loeffelmeister.de`)
      kind: Rule
      services:
        - name: uptime-kuma
          port: 3001
      middlewares:
        - name: keycloak-forward-auth
          namespace: forward-auth
